--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "@frankurk/md-links",
   "version": "0.1.0",
   "type": "module",
   "engines": {
@@ -12,8 +12,19 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "cheerio": "^1.0.0-rc.12",
     "marked": "^4.0.17"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/frankurk"
+  },
+  "keywords": [],
+  "author": "Francisca Caro",
+  "license": "ISC",
+  "bugs": {
+    "url": "git+https://github.com/frankurk/issues"
   },
   "bin": "./cli.js"
 }
